--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-konva": "^16.13.0-6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "simple-peer": "^9.7.2",
     "socket.io-client": "^2.3.0",
