--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chess.js": "^0.11.0",
+    "konva": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-konva": "^16.13.0-6",
@@ -14,6 +15,9 @@
     "react-scripts": "3.4.3",
     "simple-peer": "^9.7.2",
     "socket.io-client": "^2.3.0",
+    "styled-components": "^5.2.0",
+    "use-image": "^1.0.6",
+    "use-sound": "^1.0.2",
     "uuid": "^8.3.0"
   },
   "scripts": {
